# ear-finder

./: .gitignore  README.md  pyproject.toml  spk_array_test.m
config/: room.toml
docs/: ARCHITECTURE.md
docs/plan/: 01-monorepo-restructure.md  02-transport-layer.md  03-beamserver.md  04-matlab-client.md
earfinder/: __init__.py  __main__.py  tracker.py
matlab/: beam_client.m  config.m  test_udp_rx.m
netbridge/: __main__.py
scripts/: inject_position.py
